--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     command: 'publish'
     projects: '$(solution)'
     workingDirectory: '$(System.DefaultWorkingDirectory)'
-    arguments: '--no-restore --configuration $(buildConfiguration) /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" /p:VersionPrefix=$(major).$(minor).$(Build.BuildNumber) /p:VersionSuffix=$(Build.SourceBranchName)'
+    arguments: '--configuration $(buildConfiguration) /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:PackageLocation="$(Build.ArtifactStagingDirectory)" /p:VersionPrefix=$(major).$(minor).$(Build.BuildNumber) /p:VersionSuffix=$(Build.SourceBranchName)'
     publishWebProjects: false
       
       
