fix according to previous task outputs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,14 +22,13 @@ steps:
     Dockerfile: .\src\Pipelines.Web\Dockerfile
     arguments: --build-arg PREFIX=$(major).$(minor).$(Build.BuildId) --build-arg SUFFIX=$(Build.SourceBranchName)
     repository: pipelines
-    tags: $(major).$(minor).$(Build.BuildId)-$(Build.SourceBranchName)
 
 - task: Docker@2
   inputs:
     command: push
     containerRegistry: cstcontainers
     repository: pipelines
-    tags: $(major).$(minor).$(Build.BuildId)-$(Build.SourceBranchName)
+    tags: $(Build.BuildId)
 
 # - task: PublishBuildArtifacts@1
 #   displayName: 'Publish artifacts'
