--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     targetFolder: $(Build.ArtifactStagingDirectory)
-    contents: infrastructure/
+    contents: infrastructure/*
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts'
