--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: inline
-    workingDirectory: .\src\Pipelines.Web\
+    workingDirectory: ./src/Pipelines.Web/
     script: |
       docker build -t cstamas91/pipelines:$(imageTag) --build-arg PREFIX=$(prefix) --build-arg SUFFIX=$(suffix) .
 
